--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>This is a sample page!</title>
+<title>Background and Ambitions-- Niveta Chandrasekar</title>
 </head>
 
 <body>
