added actual content

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 </head>
 
 <body>
-<p>This is your first web page!</p>
+<p>My name is Niveta Chandrasekar. I am a third year Digital Humanities major with a minor in Computer Science. I am a transfer student from Benedictine University and this is my second year at IIT. I am a professional South Indian Classical vocalist and I have performed all over the US, India and Europe. I chose to do Digital Humanities because the idea of integrating technology within society is huge. Almost everyone uses technology on a day to day basis and exploring that usage to the benefit of society seemed like a really interesting topic. In my travels I have met a variety of people and communicating with them has always involved some means of technology. Exploring this relationship is what I hope to achieve through my coursework as a Digital Humanities major. 
+	Along with this, once I graduate I plan to try my hand at pursuing music. Music has been a part of my life since I started mumbling out words and it has always been my dream and ambition to be a musician. To achieve this, I would have to move back to India for a few years to establish myself. India is a land of opportunity especially in Humanities. India lacks teachers in fields of Humanities or Digital Sciences. I want to be a teacher there and bring out more awareness about the importance of Humanities. 
+	I used to commute to IIT from Bartlett. It was about 3 hours to and fro and it really took a lot out of my day. However now I live in Gunsaulus and it is allowing me to join clubs and whatnot. I am currently a part of ISA (Indian student association) along with Hawk Talk (a club similar to toastmasters). Apart from this I work as a music teacher near a school by my house and I teach kids within the age span of 4-13 years old. 
+	I am really looking forward to learning a lot of technical skills and improving my programming knowledge via this class. I am already learning a lot trying to clone github repositories and learning HTML. I hope to do well in the course and to have an eventful semester.
+</p>
 </body>
 </html>
