adding html 5 changes

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
-<html>
+<!DOCTYPE html> 
 <head>
 <title>Background and Ambitions-- Niveta Chandrasekar</title>
 <link href = "styles.css" rel="stylesheet" type="text/css" />
