--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 
 <!DOCTYPE html> 
 <head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Background and Ambitions-- Niveta Chandrasekar</title>
 <link href = "styles.css" rel="stylesheet" type="text/css" />
 </head>
