--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Background and Ambitions-- Niveta Chandrasekar</title>
-<link href = "styles.css" rel="stylesheet" type="text/css" />
+<link href = "newcss.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
