--- a/webpage.html
+++ b/webpage.html
@@ -6,94 +6,76 @@
 <title>Niveta Chandrasekar</title>
 </head>
 
-<div id="menu">
-	<h1>Niveta<br>Chandrasekar</h1>
-</div>
-
-<div id="content">
-
-	<p style="color:#003399;font-size:18px;font-weight:bold;text-align:left;">Welcome to My Webpage!</p>
-	<p style=գolor:#454545;font-size:16px;font-weight:normal;font-style:italic;text-align:left;ԾLatest Updates</p>
-	<p style=գolor:#000;font-size:14px;font-weight:normal;text-align:left;Ծ
-	<strong>Oct 2014:</strong>
-	Check me out on the IIT <a href="http:www.google.com">NEWSPAPER</a>.</p>
-	 
-	 
-	<div class="preamble" id="zen-preamble" role="article">
-		<h3>About Me</h3>
-		<p>Born and brought up in the city of Chicago, I have had the most amazing
-		experiences in life. Being and Indian living in America, I have learned to integrate
-		both cultures in the most unique ways. I currently study at Illinois Institute of
-		Technology and I am doing my third year there. I am also a professional Carnatic
-		Musician and I have been giving performances in USA and India for the past 4 years.
-		I run a successful blog and I am a part of Chicago Academy of Indian Fine Arts (a non
-		profit organization interested in promoting Indian fine arts for an affordable price).</p>
-		
-		<h3>Academics</h3>
-		<p>I am pursuing my bachelors in Digital Humanities with a minor in Computer Science.
-		I had a wild ride with academics. I started off at Benedictine University with Pharmacy
-		school. After one year of horrible chemistry, I transferred to IIT and changed my major
-		to Computer Science. Two years of CS and Ireally could not program much anymore. After
-		a lot of research, I decided to switch over to Digital Humanities. I had enough credits
-		to have a minor in computer science.</p>
-		
-		<ul>
-			<li>Pharmacy School
-				<ul>
-					<li>2011-2012</li>
-				</ul>
-			</li>
-			<li>Computer Science
-				<ul>
-					<li>2012-2014</li>
-				</ul>
-			</li>
-			<li>Digital Humanities
-				<ul>
-					<li>2014-Persent</li>
-				</ul>
-			</li>
-		</ul>
-		
-		<h3>Music</h3>
-		<p>I have been learning Carnatic Music for the past 14 years. I did my arangetram
-		in 2011 here in Chicago. After that, I started performing in various states here.
-		After starting college, I started performing for the Margazhi Season.  Check out
-		my website for more information!</p>
-		
-		<h3>Hobbies</h3>
-		<p>I run a successful blog called Anugraha, where I discuss Indian culture. I try to keep
-		a very open mind about my culture and hence I tend to ask questions that most would avoid.
-		Thses questions have given me the most interesting stories. Apart from blogging, I am a
-		swimmer and a huge Harry Potter fan.</p>
+<body>
+	<div id="menu">
+		<h1>Niveta<br>Chandrasekar</h1>		
+		<div class=" Pastpost" id="pastpost">
+			<nav role="navigation">
+				<p class="navlinks"><a href="#about">About Me</a></p>
+				<p class="navlinks"><a href="#academics">Academics</a></p>
+				<p class="navlinks"><a href="#music">Music</a></p>
+				<p class="navlinks"><a href="#hobbies">Hobbies</a></p>
+			</nav>
+		</div>
 	</div>
 
-	 
+	<div id="content">
 
+		<p id="welcome">Welcome to My Webpage!</p>
 
-		<aside class="sidebar" role="complementary">
-			<div class="wrapper">
-
-				<div class=" Pastpost" id="pastpost">
-					<h3 class="select">Navigation Bar</h3>
-					<nav role="navigation">
-						<ul>
-							<li><a href="/221/" class="design-name">Current</a></li>
-							<li><a href="/220/" class="design-name">Personal</a></li>
-							<li><a href="/219/" class="design-name">Academic Achievements</a></li>
-							<li><a href="/218/" class="design-name">Comments</a></li>
-						</ul>
-				</div>
-
-				 
-
-
-	</br><br>
-	Photo Credit: Computer-aj, February 19, 2009. Courtesy of WikiMedia Commons and Open Clip Art Library. Released into the public domain using the Creative Commons CC0 1.0 Universal Public Domain Dedication.</br>
-
-</div>
-
-
+		<strong>Oct 2014:</strong>
+		Check me out on the IIT <a href="http:www.google.com">NEWSPAPER</a>.</p>
+		 
+		 
+		<div class="preamble" id="zen-preamble" role="article">
+			<h3 id="about">About Me</h3>
+			<p>Born and brought up in the city of Chicago, I have had the most amazing
+			experiences in life. Being and Indian living in America, I have learned to integrate
+			both cultures in the most unique ways. I currently study at Illinois Institute of
+			Technology and I am doing my third year there. I am also a professional Carnatic
+			Musician and I have been giving performances in USA and India for the past 4 years.
+			I run a successful blog and I am a part of Chicago Academy of Indian Fine Arts (a non
+			profit organization interested in promoting Indian fine arts for an affordable price).</p>
+			
+			<h3 id="academics">Academics</h3>
+			<p>I am pursuing my bachelors in Digital Humanities with a minor in Computer Science.
+			I had a wild ride with academics. I started off at Benedictine University with Pharmacy
+			school. After one year of horrible chemistry, I transferred to IIT and changed my major
+			to Computer Science. Two years of CS and Ireally could not program much anymore. After
+			a lot of research, I decided to switch over to Digital Humanities. I had enough credits
+			to have a minor in computer science.</p>
+			
+			<ul>
+				<li>Pharmacy School
+					<ul>
+						<li>2011-2012</li>
+					</ul>
+				</li>
+				<li>Computer Science
+					<ul>
+						<li>2012-2014</li>
+					</ul>
+				</li>
+				<li>Digital Humanities
+					<ul>
+						<li>2014-Persent</li>
+					</ul>
+				</li>
+			</ul>
+			
+			<h3 id="music">Music</h3>
+			<p>I have been learning Carnatic Music for the past 14 years. I did my arangetram
+			in 2011 here in Chicago. After that, I started performing in various states here.
+			After starting college, I started performing for the Margazhi Season.  Check out
+			my website for more information!</p>
+			
+			<h3 id="hobbies">Hobbies</h3>
+			<p>I run a successful blog called Anugraha, where I discuss Indian culture. I try to keep
+			a very open mind about my culture and hence I tend to ask questions that most would avoid.
+			Thses questions have given me the most interesting stories. Apart from blogging, I am a
+			swimmer and a huge Harry Potter fan.</p>
+		</div>
+	</div>
 </body>
 
 </html>
