more progress, maybe done

--- a/webpage.html
+++ b/webpage.html
@@ -22,10 +22,6 @@
 	<div id="content">
 
 		<p id="welcome">Welcome to My Webpage!</p>
-
-		<strong>Oct 2014:</strong>
-		Check me out on the IIT <a href="http:www.google.com">NEWSPAPER</a>.</p>
-		 
 		 
 		<div class="preamble" id="zen-preamble" role="article">
 			<h3 id="about">About Me</h3>
@@ -67,7 +63,7 @@
 			<p>I have been learning Carnatic Music for the past 14 years. I did my arangetram
 			in 2011 here in Chicago. After that, I started performing in various states here.
 			After starting college, I started performing for the Margazhi Season.  Check out
-			my website for more information!</p>
+			my <a href="http://www.nivetachandrasekar.com">website</a> for more information!</p>
 			
 			<h3 id="hobbies">Hobbies</h3>
 			<p>I run a successful blog called Anugraha, where I discuss Indian culture. I try to keep
